--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,24 +6,26 @@
   <meta charset="utf-8">
   <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 
-  <title>Riot Sass</title>
+  <title>Riot</title>
 
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
+
   <script src="riot/riot.js"></script>
+  <script src="jquery/dist/jquery.min.js"></script>
+  <script src="tether/dist/js/tether.min.js"></script>
+  <script src="bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-  <h1>Todos</h1>
-
   
-  <app name="Schwifty"></app>
-
+  <div class="container">
+    <test></test>
+    <!--<app name="Schwifty"></app>-->
+  </div>
 
   <script src="tags.js"></script>
   <script src="index.js"></script>
-  <script>
-    console.log("Hello from main html file...")
-  </script>
 </body>
 
 </html>
